; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/winbond/extr_wbusb.c_hal_get_permanent_address.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/winbond/extr_wbusb.c_hal_get_permanent_address.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hw_data = type { i32, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.hw_data*, i32*)* @hal_get_permanent_address to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @hal_get_permanent_address(%struct.hw_data* %0, i32* %1) #0 {
  %3 = alloca %struct.hw_data*, align 8
  %4 = alloca i32*, align 8
  store %struct.hw_data* %0, %struct.hw_data** %3, align 8
  store i32* %1, i32** %4, align 8
  %5 = load %struct.hw_data*, %struct.hw_data** %3, align 8
  %6 = getelementptr inbounds %struct.hw_data, %struct.hw_data* %5, i32 0, i32 1
  %7 = load i64, i64* %6, align 8
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %10

9:                                                ; preds = %2
  br label %16

10:                                               ; preds = %2
  %11 = load i32*, i32** %4, align 8
  %12 = load %struct.hw_data*, %struct.hw_data** %3, align 8
  %13 = getelementptr inbounds %struct.hw_data, %struct.hw_data* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 8
  %15 = call i32 @memcpy(i32* %11, i32 %14, i32 6)
  br label %16

16:                                               ; preds = %10, %9
  ret void
}

declare dso_local i32 @memcpy(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
